test/good/generics/name06.px

class A def
    x: Int

class B def
    y: Int

func call<A,B>(x: A, f: A->B): B def
    return f(x)

print call("qwerty", _[3])
print call(A(5), B@(_.x).y+1.8)
