test/bad/generics/print04.px

func f<Any A>(A x, A->B f) B def
    return f(x)

print f([1], _)
